<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/telegramBotTokenEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telegram_bot_token"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/telegramChatIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telegram_chat_id"
        android:inputType="text" />

    <EditText
        android:id="@+id/onMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/on_message"
        android:inputType="text" />

    <EditText
        android:id="@+id/offMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/off_message"
        android:inputType="text" />

    <!--    <EditText-->
    <!--        android:id="@+id/urlEditText"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/url"-->
    <!--        android:inputType="textUri" />-->

    <Switch
        android:id="@+id/enableSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable" />

    <Switch
        android:id="@+id/insecureSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insecure" />
</LinearLayout>
